[tool.poetry]
name = "vcr-tdd-tibia"
version = "0.1.0"
description = ""
authors = ["Marcus Pereira <mpereirassa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
betamax = "^0.8.1"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
